--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -1,7 +1,7 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.example.challenge">
+    package="com.example.recipes">
    <application
-        android:label="challenge"
+        android:label="recipes"
         android:name="${applicationName}"
         android:icon="@mipmap/ic_launcher">
         <activity
