--- a/web/manifest.json
+++ b/web/manifest.json
@@ -1,6 +1,6 @@
 {
-    "name": "challenge",
-    "short_name": "challenge",
+    "name": "recipes",
+    "short_name": "recipes",
     "start_url": ".",
     "display": "standalone",
     "background_color": "#0175C2",
