--- a/windows/runner/Runner.rc
+++ b/windows/runner/Runner.rc
@@ -90,12 +90,12 @@ BEGIN
         BLOCK "040904e4"
         BEGIN
             VALUE "CompanyName", "com.example" "\0"
-            VALUE "FileDescription", "challenge" "\0"
+            VALUE "FileDescription", "recipes" "\0"
             VALUE "FileVersion", VERSION_AS_STRING "\0"
-            VALUE "InternalName", "challenge" "\0"
+            VALUE "InternalName", "recipes" "\0"
             VALUE "LegalCopyright", "Copyright (C) 2022 com.example. All rights reserved." "\0"
-            VALUE "OriginalFilename", "challenge.exe" "\0"
-            VALUE "ProductName", "challenge" "\0"
+            VALUE "OriginalFilename", "recipes.exe" "\0"
+            VALUE "ProductName", "recipes" "\0"
             VALUE "ProductVersion", VERSION_AS_STRING "\0"
         END
     END
